Added 6d pose estimation mrf problems and two references for multicut solvers

--- a/literature.bib
+++ b/literature.bib
@@ -405,15 +405,6 @@ year = {2017}
   year={2019}
 }
 
-@inproceedings{lukasik2020benders,
-  title={A Benders Decomposition Approach to Correlation Clustering},
-  author={Lukasik, Jovita and Keuper, Margret and Singh, Maneesh and Yarkony, Julian},
-  booktitle={2020 IEEE/ACM Workshop on Machine Learning in High Performance Computing Environments (MLHPC) and Workshop on Artificial Intelligence and Machine Learning for Scientific Applications (AI4S)},
-  pages={9--16},
-  year={2020},
-  organization={IEEE}
-}
-
 @inproceedings{levinkov2017comparative,
   author    = {Evgeny Levinkov and Alexander Kirillov and Bjoern Andres},
   title     = {A Comparative Study of Local Search Algorithms for Correlation Clustering},
@@ -1441,4 +1432,30 @@ url = "http://thrust.github.io/", note = "Version 1.7.0"
 	author = {Bronstein, Alexander and Bronstein, Michael and Kimmel, Ron},
 	year = {2008},
 	publisher = {{Springer Science \& Business Media}}
+}
+
+@inproceedings{michel2017global,
+  title={Global hypothesis generation for 6D object pose estimation},
+  author={Michel, Frank and Kirillov, Alexander and Brachmann, Eric and Krull, Alexander and Gumhold, Stefan and Savchynskyy, Bogdan and Rother, Carsten},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={462--471},
+  year={2017}
+}
+
+@inproceedings{lukasik2020benders,
+  title={A Benders Decomposition Approach to Correlation Clustering},
+  author={Lukasik, Jovita and Keuper, Margret and Singh, Maneesh and Yarkony, Julian},
+  booktitle={2020 IEEE/ACM Workshop on Machine Learning in High Performance Computing Environments (MLHPC) and Workshop on Artificial Intelligence and Machine Learning for Scientific Applications (AI4S)},
+  pages={9--16},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{ho2021msm,
+  title={MSM: Multi-stage Multicuts for Scalable Image Clustering},
+  author={Ho, Kalun and Chatzimichailidis, Avraam and Keuper, Margret and Keuper, Janis},
+  booktitle={International Conference on High Performance Computing},
+  pages={267--284},
+  year={2021},
+  organization={Springer}
 }
