--- a/main.tex
+++ b/main.tex
@@ -77,11 +77,12 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Ahmed Abbas$^\dagger$}
+\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, Ahmed Abbas$^\dagger$}
 \date{%
 $^\dagger$MPI for Informatics, %
 $^\ddagger$TU Munich, %
-$^\star$University of Bonn %
+$^\star$University of Bonn, %
+$^\diamond$Heidelberg University %
 }
 
 \begin{document}
