--- a/mrf.tex
+++ b/mrf.tex
@@ -117,7 +117,13 @@ Instances are originally from~\cite{lellmann2011continuous}.
 
 \subsubsection[protein-folding]{protein-folding\footnote{\url{https://keeper.mpdl.mpg.de/f/927e7cfa31fa4cd9bcd4/?dl=1}}}
 29 instances of moderate size with sparse and full connectivity and pairwise potentials of general type.
-Instances are originally from~\cite{jaimovich2006towards,elidan2011probabilistic}.
+Instances are originally from~\cite{jaimovich2006towards,elidan2011probabilistic} for solving the protein folding problem.
+
+\subsubsection[Global 6D Object Pose Estimation]{Global 6D Object Pose Estimation\footnote{\url{https://keeper.mpdl.mpg.de/f/399de399aa1146c29556/?dl=1}}}
+$32$ problem instances with $600-4800$ variables each and $13$ labels per node. The models are all fully connected.
+Instances are cropped versions of those from~\cite{michel2017global} for the 6D object pose estimation problem.
+The crops are given by masks covering the object of interest and reduce problem size.
+We do not provide ILP-files in the format of Section~\ref{sec:ilp-file-format} due to the large size of the resulting encoding.
 
 \subsection{Algorithms}
 \begin{description}[style=unboxed]
