--- a/literature.bib
+++ b/literature.bib
@@ -1459,3 +1459,40 @@ url = "http://thrust.github.io/", note = "Version 1.7.0"
   year={2021},
   organization={Springer}
 }
+
+@article{MOTChallenge2015,
+	title = {{MOTC}hallenge 2015: {T}owards a Benchmark for Multi-Target Tracking},
+	shorttitle = {MOTChallenge 2015},
+	url = {http://arxiv.org/abs/1504.01942},
+	journal = {arXiv:1504.01942 [cs]},
+	author = {Leal-Taix\'{e}, L. and Milan, A. and Reid, I. and Roth, S. and Schindler, K.},
+	month = apr,
+	year = {2015},
+	note = {arXiv: 1504.01942},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition}
+}
+
+@article{MOT16,
+	title = {{MOT}16: {A} Benchmark for Multi-Object Tracking},
+	shorttitle = {MOT16},
+	url = {http://arxiv.org/abs/1603.00831},
+	journal = {arXiv:1603.00831 [cs]},
+	author = {Milan, Anton and Leal-Taix\'{e}, Laura and Reid, Ian and Roth, Stephan and Schindler, Konrad},
+	month = mar,
+	year = {2016},
+	note = {arXiv: 1603.00831},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition}
+}
+
+@article{MOTChallenge20,
+	title={MOT20: A benchmark for multi object tracking in crowded scenes},
+	shorttitle = {MOT20},
+	url = {http://arxiv.org/abs/1906.04567},
+	journal = {arXiv:2003.09003[cs]},
+	author = {Dendorfer, Patrick and Rezatofighi, Hamid and Milan, Anton and Shi, Javen and Cremers, Daniel and Reid, Ian and Roth, Stephan and Schindler, Konrad and Leal-Taix\'{e}, Laura },
+	month = mar,
+	year = {2020},
+	note = {arXiv: 2003.09003},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition}
+}
+
