--- a/main.tex
+++ b/main.tex
@@ -114,8 +114,8 @@ We hope that this central repository will make benchmarking and comparison to es
 %\input{lifted-multicut}
 \clearpage
 \input{asymmetric-multiway-cut}
-%\clearpage
-%\input{lifted-disjoint-paths}
+\clearpage
+\input{lifted-disjoint-paths}
 \clearpage
 \input{graph-matching}
 \clearpage
