--- a/literature.bib
+++ b/literature.bib
@@ -1496,3 +1496,19 @@ url = "http://thrust.github.io/", note = "Version 1.7.0"
 	keywords = {Computer Science - Computer Vision and Pattern Recognition}
 }
 
+
+@inproceedings{deng2009imagenet,
+title={Imagenet: A large-scale hierarchical image database},
+author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+booktitle={2009 IEEE conference on computer vision and pattern recognition},
+pages={248--255},
+year={2009},
+organization={Ieee}
+}
+
+@article{aabbas23_clusterfug,
+  title = {{ClusterFuG: Clustering Fully connected Graphs by Multicut}},
+  author={Abbas, Ahmed and Swoboda, Paul},
+  journal={arXiv preprint arXiv:2301.12159},
+  year={2023}
+}
