--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
 \usetikzlibrary{math}
 \usetikzlibrary{calc}
 \usetikzlibrary{decorations.markings}
+\usetikzlibrary{backgrounds,trees,hobby}
 %\usetikzlibrary{external}
 %\tikzexternalize
 %\usepackage[subpreambles=true]{standalone}
@@ -114,6 +115,8 @@ We hope that this central repository will make benchmarking and comparison to es
 %\input{lifted-multicut}
 \clearpage
 \input{asymmetric-multiway-cut}
+\clearpage
+\input{factorized_complete_multicut}
 \clearpage
 \input{lifted-disjoint-paths}
 \clearpage
