--- a/factorized_complete_multicut.tex
+++ b/factorized_complete_multicut.tex
@@ -21,10 +21,11 @@ An illustration of factorized complete multicut is given in Figure~\ref{fig:fact
     \caption{Example illustration of factorized complete multicut problem on $5$ nodes. Each node $i$ is associated with a vector $f_i \in \R^2$ and all possible edges between distinct nodes are considered (i.e.\ the complete graph). The edge cost between a pair of nodes $i$, $j$ is measured by $s(f_i, f_j)$ and attractive/repulsive edges are colored green/red. Edge thickness represents absolute edge cost. Also shown is the optimal partitioning to $2$ clusters with cut edges denoted by dashed lines.}    
     \label{fig:factorized-complete-multicut}
 \end{figure}
-
+In the following we assume that the edge cost $s(f_i, f_j)$ is defined as $\la f_i, f_j \ra - \alpha$ as done in~\cite{aabbas23_clusterfug}. Increasing value of $\alpha$ helps in creating more clusters and vice versa.
 \subsection{File Format}
 \begin{fileformat}
 FACTORIZED COMPLETE MULTICUT
+(*$\alpha$*)
 (*$\abs{V}$*) (*d*)
 (*$f_1^1$*) ... (*$f_1^d$*)
 .
@@ -35,12 +36,11 @@ FACTORIZED COMPLETE MULTICUT
 \subsection{Benchmark datasets}
 
 \subsubsection{Imagenet Clustering}
-Clustering of the ImageNet~\cite{deng2009imagenet} validation set containing $50k$ images. Each image acts a node for the complete multicut problem. The features have a dimension of $2048$ and are normalized to have unit $L_2$ norm. Two problem instances created by~\cite{aabbas23_clusterfug} are provided containing $5k$ and $50k$ images by considering $100$ and all $1000$ classes respectively. The edge cost $s(f_i, f_j)$ is computed by $\la f_i, f_j \ra - \alpha$ with $\alpha = 0.4$.
+Clustering of the ImageNet~\cite{deng2009imagenet} validation set containing $50k$ images. Each image acts a node for the complete multicut problem. The features have a dimension of $2048$ and are normalized to have unit $L_2$ norm. Two problem instances created by~\cite{aabbas23_clusterfug} are provided containing $5k$ and $50k$ images by considering $100$ and all $1000$ classes respectively. All instances use $\alpha = 0.4$.
 
 \subsubsection{Cityscapes Instance Segmentation}
 For the task of instance segmentation on Cityscapes validation set~\cite{cordts2016cityscapes}. For each \textit{thing} class a separate complete multicut problem instance is created at $4$ times downsampled resolution w.r.t.\ the input resolution. 
-In total there are $1631$ problem instances computed by~\cite{aabbas23_clusterfug}. The largest problem instance contains around $43k$ nodes. The edge cost is measured by $s(f_i, f_j) = \la f_i, f_j \ra - \alpha$ with $\alpha = 0.4$.
-
+In total there are $1631$ problem instances computed by~\cite{aabbas23_clusterfug}. The largest problem instance contains around $43k$ nodes. All instances use $\alpha = 0.4$.
 \subsection{Algorithms}
 For solving the complete multicut problem all algorithms from Section~\ref{sec:multicut} are applicable but can be inefficient for large problems. 
 \begin{description}
