removed spacing commands

--- a/factorized_complete_multicut.tex
+++ b/factorized_complete_multicut.tex
@@ -23,7 +23,7 @@ An illustration of factorized complete multicut is given in Figure~\ref{fig:fact
 \end{figure}
 In the following we assume that the edge cost $s(f_i, f_j)$ is defined as $\la f_i, f_j \ra - \alpha$ as done in~\cite{aabbas23_clusterfug}. Increasing value of $\alpha$ helps in creating more clusters and vice versa.
 \subsection{File Format}
-\begin{fileformat}[innertopmargin=7,innerbottommargin=10]
+\begin{fileformat}
 FACTORIZED COMPLETE MULTICUT
 (*$\alpha$*)
 (*$\abs{V}$*) (*d*)
