--- a/main.tex
+++ b/main.tex
@@ -80,12 +80,13 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, Ahmed Abbas$^\dagger$}
+\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, Ahmed Abbas$^\dagger$, \\Bjoern Andres$^{\triangleleft}$, Jannik Irmai$^\triangleleft$, David Stein$^\triangleleft$}
 \date{%
 $^\dagger$MPI for Informatics, %
 $^\ddagger$TU Munich, %
 $^\star$University of Bonn, %
 $^\diamond$Heidelberg University %
+$^\triangleleft$TU Dresden %
 }
 
 \begin{document}
