--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda$^\dagger$, Andrea Hornakova$^\dagger$, Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, Ahmed Abbas$^\dagger$, \\Bjoern Andres$^{\triangleleft}$, Jannik Irmai$^\triangleleft$, David Stein$^\triangleleft$}
+\author{Paul Swoboda$^\dagger$, Bjoern Andres$^{\triangleleft}$, Andrea Hornakova$^\dagger$, Jannik Irmai$^\triangleleft$, \\ Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, David Stein$^\triangleleft$, Ahmed Abbas$^\dagger$}
 \date{%
 $^\dagger$MPI for Informatics, %
 $^\ddagger$TU Munich, %
