--- a/introduction.tex
+++ b/introduction.tex
@@ -68,5 +68,5 @@ End
 \item[SCIP~\cite{achterberg2009scip}:] Leading academic ILP and constraint integer solver.
 \item[BDD Min-Marginal Averaging~\cite{lange2021efficient}:]
 Decompose ILPs into subproblems represented by binary decision diagrams. Solve the resulting Lagrange decomposition by a sequential min-marginal averaging or with a parallel extension.
-\item[Fast Discrete Optimization on GPU (FastDOG)~\cite{abbas2021fastdog}:] Extension of the BDD min-marginal averaging to a massively parallel GPU solver.
+\item[Fast Discrete Optimization on GPU (1astDOG)~\cite{abbas2022fastdog}:] Extension of the BDD min-marginal averaging to a massively parallel GPU solver.
 \end{description}
