Corrected house and hotel multigraph matching section.

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@ backgroundcolor=\color{light-gray}
 
 \title{Structured Prediction Problem Archive}
 
-\author{Paul Swoboda$^{\circledcirc,\dagger}$, Bjoern Andres$^{\triangleleft}$, Andrea Hornakova$^\dagger$, Florian Bernard$^{\star}$, Jannik Irmai$^\triangleleft$, \\ Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, David Stein$^\triangleleft$, Ahmed Abbas$^\dagger$}
+\author{Paul Swoboda$^{\circledcirc,\dagger}$, Bjoern Andres$^{\triangleleft}$, Florian Bernard$^{\star}$, Andrea Hornakova$^\dagger$, Jannik Irmai$^\triangleleft$, \\ Paul Roetzer$^{\ddagger,\star}$, Bogdan Savchynskyy$^{\diamond}$, David Stein$^\triangleleft$, Ahmed Abbas$^\dagger$}
 \date{%
 $^\circledcirc$Heinrich-Heine~University~D\"usseldorf, %    
 $^\dagger$MPI~for~Informatics, %
