--- a/multi-graph-matching.tex
+++ b/multi-graph-matching.tex
@@ -58,8 +58,7 @@ gm (*$K-2$*) (*$K-1$*)
 \subsubsection[Hotel \& House]{Hotel \& House\footnote{\url{https://keeper.mpdl.mpg.de/f/d7ba7019eede485fb457/?dl=1}}}
 In this experiment we consider the CMU house and hotel sequences.
 $40\%$ of the points are outliers and the total number of points per image is $10$. 
-For problem generation we have followed the protocol of [41], where further details are described.
-Costs are computed as in~\cite{yan2015multi}.
+For problem generation and cost computation we have followed~\cite{yan2015multi}, where further details are described.
 In total there are 80 instances, 40 for house and 40 for hotel.
 
 \subsubsection[Synthetic]{Synthetic\footnote{\url{https://keeper.mpdl.mpg.de/f/8ca51384836d40a09487/?dl=1}}}
